# VisualizerLinearTransforms

./: .gitignore  CMakeLists.txt  README.md  gui.ndg  linear_transformations.pyw  linear_transformations_2d.py  linear_transformations_2d.pyw  main.cpp
assets/: control_panel.ndg  cube_status.ndg  matrix_input.ndg
include/: AppVLT.hpp  CustomWidgets.hpp  ManagerImpl.hpp  OpenGLCube.hpp
scripts/: build.sh  install_dependencies.sh  run.sh
src/: CustomWidgets.cpp  ManagerImpl.cpp  OpenGLCube.cpp
